--- a/src/main/resources/templates/search-text.html
+++ b/src/main/resources/templates/search-text.html
@@ -7,24 +7,24 @@
 		<meta name="format-detection" content="telephone=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<!-- Fonts-->
-		<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="./static/assets/css/reset.css">
 		<!-- 引入fonts -->
-		<link rel="stylesheet" href="./assets/css/font-awesome.min.css">
+		<link rel="stylesheet" href="./static/assets/css/font-awesome.min.css">
 		<!-- Vendors-->
-		<link rel="stylesheet" type="text/css" href="./assets/vendors/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./static/assets/vendors/bootstrap/bootstrap.min.css">
 		<!-- css -->
-		<link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="./static/assets/css/main.css">
 		<!-- 引入js -->
-		<script src="./assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
-		<script src="./assets/vendors/bootstrap/bootstrap.min.js"></script>
+		<script src="./static/assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
+		<script src="./static/assets/vendors/bootstrap/bootstrap.min.js"></script>
 </head>
 <body>
 <!-- 定义头部 -->
 	<div class="head">
 		<div class="head-bg-img">
-			<img src="./assets/img/head-bg.png" alt="">
+			<img src="./static/assets/img/head-bg.png" alt="">
 		<div class="logo">
-			<img src="./assets/img/logo-shadow.png" alt="">
+			<img src="./static/assets/img/logo-shadow.png" alt="">
 		</div>
 		</div>
 		
@@ -37,9 +37,9 @@
 					BROWSE
 				</a>
 					<ul class="dropdown-menu">
-					<li><a href="./otherPage/browse-Compound.html">Commpound</a></li>
-					<li><a href="./Browse-Pathway.html">Pathway</a></li>
-					<li><a href="./Browse-Target.html">Target</a></li>
+						<li><a href="/Browse_C">Commpound</a></li>
+						<li><a href="/Browse_P">Pathway</a></li>
+						<li><a href="/Browse_T">Target</a></li>
 				</ul>
 				
 			</li>
@@ -63,7 +63,7 @@
 <!-- 定义头部结束 -->
 <div class="content">
 	<div class="title">
-	<img src="./assets/img/PISMD Search Text.png" alt="">
+	<img src="./static/assets/img/PISMD Search Text.png" alt="">
 </div>
 <div class="search">
 	<!-- <img src="./assets/img/search.png" alt=""> -->
@@ -103,7 +103,7 @@
 
 </script>
 </body>
-<script src="./assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
+<script src="./static/assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
 <script>
 	
 </script>
