--- a/src/main/resources/templates/Browse-Target.html
+++ b/src/main/resources/templates/Browse-Target.html
@@ -7,13 +7,13 @@
 		<meta name="format-detection" content="telephone=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<!-- Fonts-->
-		<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="./static/assets/css/reset.css">
 		<!-- 引入fonts -->
-		<link rel="stylesheet" href="./assets/css/font-awesome.min.css">
+		<link rel="stylesheet" href="./static/assets/css/font-awesome.min.css">
 		<!-- Vendors-->
-		<link rel="stylesheet" type="text/css" href="./assets/vendors/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./static/assets/vendors/bootstrap/bootstrap.min.css">
 		<!-- css -->
-		<link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="./static/assets/css/main.css">
 		<style>
 /*.page_ctrl{
   /*text-align: center;
@@ -92,9 +92,9 @@
 	<!-- 定义头部 -->
 	<div class="head">
 		<div class="head-bg-img">
-			<img src="./assets/img/head-bg.png" alt="">
+			<img src="./static/assets/img/head-bg.png" alt="">
 		<div class="logo">
-			<img src="./assets/img/logo-shadow.png" alt="">
+			<img src="./static/assets/img/logo-shadow.png" alt="">
 		</div>
 		</div>
 		
@@ -107,15 +107,15 @@
 					BROWSE
 				</a>
 					<ul class="dropdown-menu">
-					<li><a href="./otherPage/browse-Compound.html">Commpound</a></li>
-					<li><a href="./Browse-Pathway.html">Pathway</a></li>
-					<li><a href="#">Target</a></li>
+						<li><a href="/Browse_C">Commpound</a></li>
+						<li><a href="/Browse_P">Pathway</a></li>
+						<li><a href="#">Target</a></li>
 				</ul>
 				
 			</li>
 		<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">SEARCH</a>
 			<ul class="dropdown-menu">
-					<li><a href="./search-text.html">Text</a></li>
+					<li><a href="/Search_text">Text</a></li>
 					<li><a href="./Search-Structure.html">Structure</a></li>
 					<li><a href="#">Sequence</a></li>
 					
@@ -133,8 +133,8 @@
 <!-- 内容定义开始 -->
 <div class="page"></div>
 <!-- 引入分页js -->
-<script src="./assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
-<script src="./assets/js/fPage.js"></script>
+<script src="./static/assets/vendors/_jquery/jquery-3.3.1.min.js"></script>
+<script src="./static/assets/js/fPage.js"></script>
 <!--插件使用-->
  <script>
 
