--- a/src/main/resources/templates/browse-Compound.html
+++ b/src/main/resources/templates/browse-Compound.html
@@ -65,9 +65,10 @@
     $(document).ready(function(){
 
         $.ajax({
-            url: "/browse-C",//写from 中的action
+            url: "/PISMDB-0.0.1-SNAPSHOT/browse-C",//写from 中的action
             type: "get",
             async: true,
+
             contentType:'application/json',
             success: function(data){
                 // console.log(data.type);
