--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,15 +37,15 @@
                     BROWSE
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="/Browse_C">Commpound</a></li>
-                    <li><a href="/Browse_P">Pathway</a></li>
-                    <li><a href="/Browse_T">Target</a></li>
+                    <li><a href="./Browse_C">Commpound</a></li>
+                    <li><a href="./Browse_P">Pathway</a></li>
+                    <li><a href="./Browse_T">Target</a></li>
                 </ul>
 
             </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">SEARCH</a>
                 <ul class="dropdown-menu">
-                    <li><a href="/Search_text">Text</a></li>
+                    <li><a href="./Search_text">Text</a></li>
                     <li><a href="./Search-Structure.html">Structure</a></li>
                     <li><a href="./Search-Sequence.html">Sequence</a></li>
 
