--- a/src/main/resources/templates/Browse-Pathway.html
+++ b/src/main/resources/templates/Browse-Pathway.html
@@ -156,7 +156,7 @@
 			// console.log($("#searchList").empty());
 
 			$.ajax({
-				url: "/show",
+				url: "/showAllPathways",
 				type: "get",
 				async: true,
 				dataType: "json",
