大部分接口进行跨域处理

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -13,7 +13,7 @@
     Insert into MySQL successfully!
 </h4>
 
-<a href="/otherPage/browse-Compound.html"><button type="button" class="btn btn-primary">Return to home</button></a>
+<a href="/index"><button type="button" class="btn btn-primary">Return to home</button></a>
 <!--<a href="/all"><button type="button" class="btn btn-warning">See Records</button></a>-->
 </body>
 </html>
